# LangGraph-Mastery-Playbook

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh.md  STUDIO_SETUP.md  langgraph.json  pyproject.toml  requirements.in  structure_output.md
docs/: course_file_review_framework.md
scripts/: production_memory_smoke.py
src/langgraph_learning/: __init__.py
src/langgraph_learning/stage01_foundations/: __init__.py  agent_with_reactive_router.py  agent_with_router.py  agent_with_structured_output.py  agent_with_tool_call.py  agent_with_tool_router.py  quickstart.py  reactive_agent.py  simple_state_graph.py  tool_calling_chain.py  tool_router.py
src/langgraph_learning/stage01_intro/: __init__.py  quickstart.py  simple_state_graph.py  tool_calling_chain.py
src/langgraph_learning/stage02_agent_flows/: __init__.py  reactive_agent.py  tool_router.py
src/langgraph_learning/stage02_memory_and_personalization/: agent_with_memory.py  external_memory_chatbot.py  long_term_memory_personalization_demo.py  memory_collection_graph.py  memory_profile_graph.py  memory_store_demo.py  summarizing_chatbot.py  trustcall_memory_agent.py
src/langgraph_learning/stage02_memory_basics/: agent_with_chat_summary.py  agent_with_external_short_term_memory.py  agent_with_short_term_memory.py
src/langgraph_learning/stage02_memory_management/: __init__.py  agent_with_chat_summary.py  agent_with_external_short_term_memory.py  agent_with_long_term_memory.py  agent_with_short_term_memory.py  configuration.py  memory_collection_graph.py  memory_profile_graph.py  trustcall_memory_agent.py
src/langgraph_learning/stage03_memory_systems/: __init__.py  agent_with_memory.py  configuration.py  (+6 more)
(+68 files in other folders)
