[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LangGraph_Mastery_Playbook"
version = "0.1.0"
description = "Stage-based LangGraph learning curriculum"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langgraph-checkpoint-sqlite",
    "langgraph-cli[inmem]",
    "langsmith",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-tavily",
    "notebook",
    "tavily-python",
    "trustcall",
    "wikipedia",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["langgraph_learning*"]

[tool.uv]
package = true
