[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LangGraph_Mastery_Playbook"
version = "0.1.0"
description = "Stage-based LangGraph learning curriculum"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.0",
    "langgraph-prebuilt>=1.0.0",
    "langgraph-sdk>=0.2.9",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.4",
    "langsmith",
    "langchain-community",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "httpx[socks]",
    "langchain-tavily",
    "python-dotenv",
    "notebook",
    "tavily-python",
    "wikipedia",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["langgraph_learning*"]

[tool.uv]
package = true
